# mercury-spec

./: .gitignore  README.md  TODO  playground.py  playground.xml  pyproject.toml  sample-usage.py
mercury/bindings/python/: README.md  pyproject.toml
mercury/bindings/python/mercury/: __init__.py  config.py  utils.py
mercury/bindings/python/src/mercury_nn/: __init__.py  config.py  core.py  exceptions.py  filter_validation.py  filtering.py  interface.py  manifest_validation.py  model_creation.py  model_selection.py  tag_matching.py  utils.py
mercury/bindings/python/src/mercury_nn/specification/: constants.py  exceptions.py  interface.py  load_base_model_filter.py  load_call_schemes.py  load_filter_match_failure_specs.py  load_tags.py  load_valid_usages.py
mercury/bindings/python/src/mercury_nn/validation/: filter_validation.py  manifest_validation.py
mercury/bindings/python/tests/: config.py  run_all  test_filter_validation.py  test_filtering.py  test_load_call_schemes.py  test_load_tags.py  test_manifest_validation.py  test_model_creation.py  test_model_selection.py  test_spec_interface.py  test_tag_matching.py  test_utils.py
mercury/bindings/python/tests/specification/: test_load_base_model_filter.py  test_load_tags.py  test_spec_interface.py
mercury/bindings/python/tests/validation/: test_filter_validation.py  test_manifest_validation.py
mercury/tools/mercury-nn-dev-tool/: README.md  pyproject.toml
mercury/tools/mercury-nn-dev-tool/src/: main.py  mercury.py
mercury/tools/mercury-nn-dev-tool/tests/: config.py  test_main.py
mercury/tools/mercury-nn-dev-tool/tests/data/: chat-gpt.xml
(+149 files in other folders)
