[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mercury_nn_dev_tool"
version = "0.0.1"
authors = [
  { name="Trent Fellbootman", email="trentfellbootman@gmail.com" },
]
description = "Dev-tool for Mercury, an AI framework for developers."
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mercury_nn==0.0.7"
]

[project.scripts]
mdev = "src.main:main"

[project.urls]
"Mercury Homepage" = "https://trent-fellbootman.github.io/mercury.io/"
"Mercury GitHub" = "https://github.com/Trent-Fellbootman/mercury"
"Mercury Documentation" = "https://mercurynn.readthedocs.io/en/latest/"